--- a/BlazorWOL.Client/Pages/DevicesComponent.cshtml
+++ b/BlazorWOL.Client/Pages/DevicesComponent.cshtml
@@ -1,20 +1,17 @@
-﻿<div class="device">
-  <div class="name">
-    <span class="caption">Device Name</span>
-    <span class="value">@Device.Name</span>
+﻿@foreach (var device in Devices) {
+  <div class="device">
+    <div class="name">
+      <span class="caption">Device Name</span>
+      <span class="value">@device.Name</span>
+    </div>
+    <div class="mac-address">
+      <span class="caption">MAC Address</span>
+      <span>@device.MACAddress</span>
+    </div>
   </div>
-  <div class="mac-address">
-    <span class="caption">MAC Address</span>
-    <span>@Device.MACAddress</span>
-  </div>
-</div>
+}
 
 @functions {
-  Device Device = new Device {
-    Name = "Odin",
-    MACAddress = "00:15:5D:52:CA:B6"
-  };
-
   Device[] Devices = {
     new Device {
       Name = "Odin",
