[update]フォームとバインドするためのフィールドを追加

--- a/BlazorWOL.Client/Pages/DevicesComponent.cshtml
+++ b/BlazorWOL.Client/Pages/DevicesComponent.cshtml
@@ -18,4 +18,6 @@
 
   protected override async Task OnInitAsync() =>
     Devices = await DevicesService.GetDeviceAsync();
+
+  Device NewDevice = new Device();
 }
