[update]追加ボタンクリック時の処理を実装

--- a/BlazorWOL.Client/Pages/DevicesComponent.cshtml
+++ b/BlazorWOL.Client/Pages/DevicesComponent.cshtml
@@ -20,4 +20,9 @@
     Devices = await DevicesService.GetDeviceAsync();
 
   Device NewDevice = new Device();
+
+  async Task OnOk() {
+    await DevicesService.AddDeviceAsync(NewDevice);
+    NewDevice = new Device();
+  }
 }
