--- a/BlazorWOL.Client/Pages/DevicesComponent.cshtml
+++ b/BlazorWOL.Client/Pages/DevicesComponent.cshtml
@@ -1,4 +1,5 @@
-﻿@inject DevicesService DevicesService
+﻿@using System.Text.RegularExpressions
+@inject DevicesService DevicesService
 
 @foreach (var device in Devices) {
   <div class="device">
@@ -40,7 +41,27 @@
   Device NewDevice = new Device();
 
   async Task OnOk() {
+    if (string.IsNullOrWhiteSpace(NewDevice.Name)) {
+      ErrorMessage = "Please enter device name.";
+    } else if (string.IsNullOrWhiteSpace(NewDevice.MACAddress)) {
+      ErrorMessage = "Please enter MAC address.";
+    } else if (!isValidMACAddress(NewDevice.MACAddress)) {
+      ErrorMessage = "MAC address format is incorrect.";
+    } else {
+      ErrorMessage = "";
+    }
+    if (ErrorMessage != "") {
+      return;
+    }
     await DevicesService.AddDeviceAsync(NewDevice);
     NewDevice = new Device();
   }
+
+  bool isValidMACAddress(string MACAddress) =>
+    Regex.IsMatch(
+      NewDevice.MACAddress,
+      @"^[\da-f]{2}((:|-)[\da-f]{2}){5}$",
+      RegexOptions.IgnoreCase);
+
+  string ErrorMessage = "";
 }
