[update]MACアドレスの正規化を実装

--- a/BlazorWOL.Client/Pages/DevicesComponent.cshtml
+++ b/BlazorWOL.Client/Pages/DevicesComponent.cshtml
@@ -53,6 +53,9 @@
     if (ErrorMessage != "") {
       return;
     }
+
+    NewDevice.MACAddress = NewDevice.MACAddress.Replace("-", ":").ToUpper();
+
     await DevicesService.AddDeviceAsync(NewDevice);
     NewDevice = new Device();
   }
