[update]エラーメッセージの表示

--- a/BlazorWOL.Client/Pages/DevicesComponent.cshtml
+++ b/BlazorWOL.Client/Pages/DevicesComponent.cshtml
@@ -27,6 +27,9 @@
       <input type="text" name="name" bind="@NewDevice.MACAddress" />
     </span>
   </div>
+  <div class="error-message">
+    @ErrorMessage
+  </div>
   <div class="actions">
     <a class="button" onclick="@OnOk">OK</a>
   </div>
