--- a/BlazorWOL.Client/Pages/DevicesComponent.cshtml
+++ b/BlazorWOL.Client/Pages/DevicesComponent.cshtml
@@ -1,4 +1,5 @@
-﻿@using System.Text.RegularExpressions
+﻿@page "/"
+@using System.Text.RegularExpressions
 @inject DevicesService DevicesService
 
 @foreach (var device in Devices) {
