[update]新規デバイス追加ページへリンクを作成

--- a/BlazorWOL.Client/Pages/DevicesComponent.cshtml
+++ b/BlazorWOL.Client/Pages/DevicesComponent.cshtml
@@ -36,6 +36,10 @@
   </div>
 </div>
 
+<div>
+  <a class="button" href="/addnew">Add Device</a>
+</div>
+
 @functions {
   IEnumerable<Device> Devices;
 
