--- a/BlazorWOL.Client/Pages/DevicesComponent.cshtml
+++ b/BlazorWOL.Client/Pages/DevicesComponent.cshtml
@@ -18,7 +18,7 @@
 </div>
 
 @functions {
-  IEnumerable<Device> Devices;
+  IEnumerable<Device> Devices = Enumerable.Empty<Device>();
 
   protected override async Task OnInitAsync() =>
     Devices = await DevicesService.GetDeviceAsync();
