--- a/BlazorWOL.Client/Pages/AddDevice.cshtml
+++ b/BlazorWOL.Client/Pages/AddDevice.cshtml
@@ -21,6 +21,7 @@
   </div>
   <div class="actions">
     <a class="button" onclick="@OnOk">OK</a>
+    <a class="button" href="/">Cancel</a>
   </div>
 </div>
 
