--- a/BlazorWOL.Client/Pages/DevicesComponent.cshtml
+++ b/BlazorWOL.Client/Pages/DevicesComponent.cshtml
@@ -1,5 +1,6 @@
 ﻿@page "/"
 @inject DevicesService DevicesService
+@inject Microsoft.AspNetCore.Blazor.Services.IUriHelper UriHelper
 
 @foreach (var device in Devices) {
   <div class="device">
@@ -10,6 +11,11 @@
     <div class="mac-address">
       <span class="caption">MAC Address</span>
       <span>@device.MACAddress</span>
+    </div>
+    <div>
+      <button class="button edit-button" onclick="@(() => OnClickEdit(device))">
+        編集
+      </button>
     </div>
   </div>
 }
@@ -22,4 +28,8 @@
 
   protected override async Task OnInitAsync() =>
     Devices = await DevicesService.GetDeviceAsync();
+
+  void OnClickEdit(Device device) {
+    UriHelper.NavigateTo($"/edit/{device.Id}");
+  }
 }
