[add]編集OKボタンクリック時の処理を実装

--- a/BlazorWOL.Client/Pages/EditDevice.cshtml
+++ b/BlazorWOL.Client/Pages/EditDevice.cshtml
@@ -20,4 +20,9 @@
     };
     initialized = true;
   }
+
+  async Task OnClickOk(Device edited) {
+    await DevicesService.UpdateDeviceAsync(edited.Id, edited);
+    UriHelper.NavigateTo("/");
+  }
 }
