[update]デバイスの表示を実装

--- a/BlazorWOL.Client/Pages/EditDevice.cshtml
+++ b/BlazorWOL.Client/Pages/EditDevice.cshtml
@@ -3,6 +3,13 @@
 @inject Microsoft.AspNetCore.Blazor.Services.IUriHelper UriHelper
 
 <p>Device Guid is @DeviceId</p>
+@if (initialized) {
+  @if (Item is null) {
+    <p class="error-message">No device information found</p>
+  } else {
+    <DeviceForm Item="@Item" OnClickOk="@OnClickOk" />
+  }
+}
 
 @functions {
   [Parameter]
