--- a/BlazorWOL.Client/Pages/DeviceForm.cshtml
+++ b/BlazorWOL.Client/Pages/DeviceForm.cshtml
@@ -48,7 +48,7 @@
     Item.MACAddress = Item.MACAddress.Replace("-", ":").ToUpper();
 
     await OnClickOk?.Invoke(Item);
-    Item = new Device();
+    // Item = new Device();
   }
 
   bool isValidMACAddress(string MACAddress) =>
