--- a/BlazorWOL.Client/Shared/MainLayout.cshtml
+++ b/BlazorWOL.Client/Shared/MainLayout.cshtml
@@ -1,5 +1,7 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@inherits BlazorLayoutComponent
+
+<header>
+  <h1>Blazor WOL</h1>
+</header>
+
+@Body
