[update]削除時の処理を実装

--- a/BlazorWOL.Client/Pages/EditDevice.cshtml
+++ b/BlazorWOL.Client/Pages/EditDevice.cshtml
@@ -7,7 +7,7 @@
   @if (Item is null) {
     <p class="error-message">No device information found</p>
   } else {
-    <DeviceForm Item="@Item" OnClickOk="@OnClickOk" />
+    <DeviceForm Item="@Item" OnClickOk="@OnClickOk" OnClickDelete="@OnClickDelete" />
   }
 }
 
@@ -30,6 +30,11 @@
 
   async Task OnClickOk(Device edited) {
     await DeviceService.UpdateDeviceAsync(DeviceId, edited);
+    UriHelper.NavigateTo("/");
+  }
+
+  async Task OnClickDelete() {
+    await DeviceService.DeleteDeviceAsync(DeviceId);
     UriHelper.NavigateTo("/");
   }
 }
