--- a/BlazorWOL.Client/Pages/DevicesComponent.cshtml
+++ b/BlazorWOL.Client/Pages/DevicesComponent.cshtml
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@using Microsoft.JSInterop
 @inject DeviceService DeviceService
 @inject Microsoft.AspNetCore.Blazor.Services.IUriHelper UriHelper
 
@@ -13,8 +14,11 @@
       <span>@device.MACAddress</span>
     </div>
     <div>
+      <button class="button wakeup-button" onclick="@(() => OnClickWakeup(device))">
+        Wakeup
+      </button>
       <button class="button edit-button" onclick="@(() => OnClickEdit(device))">
-        編集
+        Edit
       </button>
     </div>
   </div>
@@ -31,5 +35,10 @@
 
   void OnClickEdit(Device device) {
     UriHelper.NavigateTo($"/edit/{device.Id}");
+  }
+
+  async Task OnClickWakeup(Device device) {
+    await DeviceService.WakeupAsync(device.Id);
+    await JSRuntime.Current.InvokeAsync<object>("alert", "Magic packet sent.");
   }
 }
